tests/fail/elaboration/unexpected-parameter/placeholder-body-type.snap
stdout = ''
stderr = '''
error: too many parameters in function literal
  ┌─ tests/fail/elaboration/unexpected-parameter/placeholder-body-type.fathom:3:16
  │
3 │ fun (A : Type) a (b : A) => a : fun (A : Type) -> _
  │                ^
  │                │
  │                unexpected parameter
  │                expected type _ A
  │
  = expected type _ A

error: failed to infer placeholder expression
  ┌─ tests/fail/elaboration/unexpected-parameter/placeholder-body-type.fathom:3:51
  │
3 │ fun (A : Type) a (b : A) => a : fun (A : Type) -> _
  │                                                   ^ unsolved placeholder expression

'''
